--- a/app/static/index.html
+++ b/app/static/index.html
@@ -66,6 +66,16 @@
           <pre id="query-kb-response" class="response-area">Response will appear here</pre>
         </div>
       </div>
+
+      <div class="panel">
+        <h2>List All Documents</h2>
+        <p>Retrieve a list of all documents currently in the knowledge base.</p>
+        <button class="btn" onclick="listAllDocuments()">List Documents</button>
+        <div class="response">
+          <h3>Response:</h3>
+          <pre id="list-all-documents-response" class="response-area">Response will appear here</pre>
+        </div>
+      </div>
     </div>
     
     <div id="rag-tab" class="tab-content">
